@@ -21,50 +21,57 @@ import java.util.stream.Collectors;
 import static com.kairos.commons.utils.DateUtils.*;
 import static com.kairos.commons.utils.ObjectUtils.isCollectionNotEmpty;
 import static com.kairos.commons.utils.ObjectUtils.isNull;
+import static com.kairos.enums.kpi.KPIRepresentation.REPRESENT_PER_STAFF;
 
 public class KPIUtils {
 
     public static final String DD_MM_YYYY = "dd-MM-yyyy";
-    public static final String DD_MMM_YY = "ddMMMyy";
+    public static final String DD_MMM_YY = "dd-MMM-yy";
 
-    public static List<Long> getLongValue(List<Object> objects){
-        return !(ObjectUtils.isCollectionEmpty(objects))?objects.stream().map(o -> ((Integer)o).longValue()).collect(Collectors.toList()):new ArrayList<>();
+    private KPIUtils() {
     }
 
-    public static List<LocalDate> getLocalDate(List<Object> objects){
-        return !(ObjectUtils.isCollectionEmpty(objects))?objects.stream().map(o-> (o instanceof LocalDate) ? (LocalDate) o : DateUtils.asLocalDate((String)o)).collect(Collectors.toList()) : Arrays.asList(DateUtils.getStartDateOfWeek(),DateUtils.getEndDateOfWeek());
+    public static List<Long> getLongValue(List<Object> objects) {
+        return !(ObjectUtils.isCollectionEmpty(objects)) ? objects.stream().map(o -> ((Integer) o).longValue()).collect(Collectors.toList()) : new ArrayList<>();
     }
 
-    public static List<BigInteger> getBigIntegerValue(List<Object> objects){
-        return objects.stream().map(o->new BigInteger((o).toString())).collect(Collectors.toList());
+    public static List<LocalDate> getLocalDate(List<Object> objects) {
+        return !(ObjectUtils.isCollectionEmpty(objects)) ? objects.stream().map(o -> (o instanceof LocalDate) ? (LocalDate) o : DateUtils.asLocalDate((String) o)).collect(Collectors.toList()) : Arrays.asList(DateUtils.getStartDateOfWeek(), DateUtils.getEndDateOfWeek());
     }
 
-    public static Set<DayOfWeek> getDaysOfWeeksfromString(List<Object> objects){
+    public static List<BigInteger> getBigIntegerValue(List<Object> objects) {
+        return objects.stream().map(o -> new BigInteger((o).toString())).collect(Collectors.toList());
+    }
+    public static Set<BigInteger> getBigIntegerSet(List<Object> objects) {
+        return objects.stream().map(o -> new BigInteger((o).toString())).collect(Collectors.toSet());
+    }
+
+    public static Set<DayOfWeek> getDaysOfWeeksfromString(List<Object> objects) {
         return objects.stream().map(o -> DayOfWeek.valueOf((o.toString()))).collect(Collectors.toSet());
     }
 
-    public static List<DateTimeInterval> getDateTimeIntervals(IntervalUnit interval, int value, DurationType frequencyType, List<LocalDate> filterDates,LocalDate localDate) {
+    public static List<DateTimeInterval> getDateTimeIntervals(IntervalUnit interval, int value, DurationType frequencyType, List<LocalDate> filterDates, LocalDate localDate) {
         List<DateTimeInterval> dateTimeIntervals = new ArrayList<>();
-        if(isCollectionNotEmpty(filterDates)){
-            dateTimeIntervals.add(new DateTimeInterval(asLocalDate(filterDates.get(0).toString()),asLocalDate(filterDates.get(1).toString())));
+        if (isCollectionNotEmpty(filterDates)) {
+            dateTimeIntervals.add(new DateTimeInterval(asLocalDate(filterDates.get(0).toString()), asLocalDate(filterDates.get(1).toString())));
             return dateTimeIntervals;
         }
-        if(isNull(localDate)){
+        if (isNull(localDate)) {
             localDate = DateUtils.getCurrentLocalDate();
         }
 
         switch (interval) {
             case LAST:
-                localDate=localDate.minusDays(1);
+                localDate = localDate.minusDays(1);
                 for (int i = 0; i < value; i++) {
-                    localDate = getLastDateTimeIntervalByDate(localDate,frequencyType, dateTimeIntervals);
+                    localDate = getLastDateTimeIntervalByDate(localDate, frequencyType, dateTimeIntervals);
                 }
                 break;
             case CURRENT:
                 getCurrentDateTimeIntervalByDate(localDate, frequencyType, dateTimeIntervals);
                 break;
             case NEXT:
-                localDate=localDate.plusDays(1);
+                localDate = localDate.plusDays(1);
                 for (int i = 0; i < value; i++) {
                     localDate = getNextDateTimeIntervalByDate(localDate, frequencyType, dateTimeIntervals);
                 }
@@ -77,65 +84,61 @@ public class KPIUtils {
     }
 
 
-
-    public static LocalDate getNextDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals ) {
+    public static LocalDate getNextDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals) {
         LocalDate currentDate = date;
-        LocalDate nextDate = getNextLocaDateByDurationType(date, durationType,1);
+        LocalDate nextDate = getNextLocaDateByDurationType(date, durationType, 1);
         dateTimeIntervals.add(new DateTimeInterval(currentDate, nextDate));
         return nextDate;
     }
 
-    public static LocalDate getCurrentDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals ) {
+    public static LocalDate getCurrentDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals) {
         LocalDate currentDate = getFirstLocalDateByDurationType(date, durationType);
         LocalDate nextDate = getLastLocaDateByDurationType(date, durationType);
         dateTimeIntervals.add(new DateTimeInterval(currentDate, nextDate));
         return nextDate;
     }
 
-    public static LocalDate getLastDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals ) {
+    public static LocalDate getLastDateTimeIntervalByDate(LocalDate date, DurationType durationType, List<DateTimeInterval> dateTimeIntervals) {
         LocalDate currentDate = date;
-        LocalDate nextDate = getPriviousLocaDateByDurationType(date, durationType,1);
-        dateTimeIntervals.add(new DateTimeInterval( nextDate, currentDate));
+        LocalDate nextDate = getPriviousLocaDateByDurationType(date, durationType, 1);
+        dateTimeIntervals.add(new DateTimeInterval(nextDate, currentDate));
         return nextDate;
     }
 
     public static void sortKpiDataByDateTimeInterval(List<CommonKpiDataUnit> kpiDataUnits) {
-        if(isCollectionNotEmpty(kpiDataUnits)) {
+        if (isCollectionNotEmpty(kpiDataUnits)) {
             String label = kpiDataUnits.get(0).getLabel();
             if (label.matches("\\d{2}-\\d{2}-\\d{4}")) {
-                kpiDataUnits.sort((o1, o2) -> LocalDate.parse(o1.getLabel(), DateTimeFormatter.ofPattern(DD_MMM_YY)).compareTo(LocalDate.parse(o2.getLabel(), DateTimeFormatter.ofPattern(DD_MMM_YY))));
+                kpiDataUnits.sort(Comparator.comparing(o -> LocalDate.parse(o.getLabel(), DateTimeFormatter.ofPattern(DD_MMM_YY))));
             } else if (label.matches("\\d{2}-\\d{2}-\\d{4} - \\d{2}-\\d{2}-\\d{4}")) {
-                kpiDataUnits.sort((o1, o2) -> LocalDate.parse(o1.getLabel().split(" ")[0].trim(), DateTimeFormatter.ofPattern(DD_MMM_YY)).compareTo(LocalDate.parse(o2.getLabel().split(" ")[0].trim(), DateTimeFormatter.ofPattern(DD_MMM_YY))));
+                kpiDataUnits.sort(Comparator.comparing(o -> LocalDate.parse(o.getLabel().split(" ")[0].trim(), DateTimeFormatter.ofPattern(DD_MMM_YY))));
             }
         }
     }
 
-    public static boolean verifyKPIResponseListData(Map<Object, List<ClusteredBarChartKpiDataUnit>> objectListMap){
-        return  objectListMap.values().stream().flatMap(clusteredBarChartKpiDataUnits -> clusteredBarChartKpiDataUnits.stream()).anyMatch(clusteredBarChartKpiDataUnit -> !new
-                Double(0.0).equals(clusteredBarChartKpiDataUnit.getValue()));
+    public static boolean verifyKPIResponseListData(Map<Object, List<ClusteredBarChartKpiDataUnit>> objectListMap) {
+        return objectListMap.values().stream().flatMap(Collection::stream).anyMatch(clusteredBarChartKpiDataUnit -> !
+                Double.valueOf(0.0).equals(clusteredBarChartKpiDataUnit.getValue()));
     }
 
-    public static boolean verifyKPIResponseData(Map<Object, Double> objectListMap){
-        return  objectListMap.values().stream().anyMatch(value -> !new Double(0.0).equals(value));
+    public static boolean verifyKPIResponseData(Map<Object, Double> objectListMap) {
+        return objectListMap.values().stream().anyMatch(value -> !Double.valueOf(0.0).equals(value));
     }
 
-    public static Double getValueWithDecimalFormat(Double value){
+    public static Double getValueWithDecimalFormat(Double value) {
         DecimalFormat decimalFormat = new DecimalFormat("#.##");
-        return  Double.valueOf(decimalFormat.format(value));
+        return Double.valueOf(decimalFormat.format(value));
     }
 
     public static void getKpiDataUnits(Map<Object, List<ClusteredBarChartKpiDataUnit>> objectListMap, List<CommonKpiDataUnit> kpiDataUnits, ApplicableKPI applicableKPI, List<StaffKpiFilterDTO> staffKpiFilterDTOS) {
         Map<Long, String> staffIdAndNameMap = staffKpiFilterDTOS.stream().collect(Collectors.toMap(StaffKpiFilterDTO::getId, StaffKpiFilterDTO::getFullName));
         for (Map.Entry<Object, List<ClusteredBarChartKpiDataUnit>> entry : objectListMap.entrySet()) {
-            switch (applicableKPI.getKpiRepresentation()) {
-                case REPRESENT_PER_STAFF:
-                    kpiDataUnits.add(new ClusteredBarChartKpiDataUnit(staffIdAndNameMap.get(entry.getKey()), entry.getValue()));
-                    break;
-                default:
-                    kpiDataUnits.add(new ClusteredBarChartKpiDataUnit(entry.getKey().toString(), entry.getValue()));
-                    break;
-
+            if (REPRESENT_PER_STAFF.equals(applicableKPI.getKpiRepresentation())) {
+                kpiDataUnits.add(new ClusteredBarChartKpiDataUnit(staffIdAndNameMap.get(entry.getKey()), entry.getValue()));
+            } else {
+                kpiDataUnits.add(new ClusteredBarChartKpiDataUnit(entry.getKey().toString(), entry.getValue()));
             }
+
         }
     }
 }
